gcc/testsuite/algol60.dg/fail/types2.a60
'comment' { dg-do compile } ;
'begin'
 'integer' a;
 'real' b;
 a := 4.5; 'comment' { dg-error "type mismatch" } ;
 b := `ahoj'; 'comment' { dg-error "type mismatch" } ;
'end';
